Add media links
Added links to my LinkedIn and GitHub profiles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <div class="hero">
       <h1>Sotero Osuna</h1>
       <h3><span class="auto-type"></span></h3>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/sotero-osuna-gomez/" target="_blank">
+          <img src="media/linkedin-logo.svg" alt="LinkedIn" class="social-icon">
+        </a>
+        <a href="https://github.com/soteroosunag" target="_blank">
+          <img src="media/github-logo.svg" alt="GitHub" class="social-icon">
+        </a>
+      </div>
     </div>
+
 
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
