Add nav bar and pages
Added a navigation bar and work/about pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="stylesheet" href="syles.css">
 </head>
 <body>
+  <nav>
+    <div class="nav-left">
+      <a href="index.html" class="nav-btn">Home</a>
+    </div>
+    <div class="nav-right">
+      <a href="pages/work.html" class="nav-btn">Work</a>
+      <span class="separator">|</span>
+      <a href="pages/about.html" class="nav-btn">About</a>
+    </div>
+  </nav>
     <div class="hero">
       <h1>Sotero Osuna</h1>
       <h3><span class="auto-type"></span></h3>
