Add about page content
Added about page content and profile picture

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,8 +17,16 @@
           <a href="about.html" class="nav-btn">About</a>
         </div>
     </nav>
-    <div>
-      <h1>Page in progress...</h1>
+    <div class="about-container">
+      <div class="profile-pic-container"></div>
+      <h2 class="about-title">About me</h2>
+      <p> Hello there! I'm a recent CS graduate and a software engineer, with particular interst in Machine Learning and Artificial Intelligence. My current role is 
+        AI Developer at <a href="https://www.capitalcertainty.com" target="_blank"><span>Capital Certainty</span></a>, where I use my skills in AI/ML and web development to work with clients at enhancing and escalating their products.</p>
+      <p>I'm passionate about learning new things and understanding how things really work. I never say no to a new challenge and pursue them constantly. I'm a firm believer of continuous growth and always striving to be better every day.</p>
+      <p>Outside of work, I consider myself to be a well-rounded person and could probably talk about almost anything, though my two main interests are reading and sports. When it comes to reading, I like to alternate between 
+        fiction and non-fiction, with my favorite genres being science (and science fiction), neo-noir, and classic literature. If you are curious, my Goodreads profile is <a href="https://www.goodreads.com/user/show/132694630-sotero-osuna " target="_blank">
+        <span>here</span></a>. I also used to play all kinds of sports growing up, with basketball being my favorite and the one I've played the longest, even being part of the school's team up until high school. Nowadays, I have switched to 
+        tennis and powerlifting with some running and hiking here and there.</p>
     </div>
-</body>
+  </body>
 </html>
