--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@
         fiction and non-fiction, with my favorite genres being science (and science fiction), neo-noir, and classic literature. If you want to know more about what I read, my Goodreads profile is <a href="https://www.goodreads.com/user/show/132694630-sotero-osuna " target="_blank">
         <span>here</span></a>. For sports, I am also versatile and have played a wide variety of them growing up, with basketball being my favorite and the one I've played the longest, even being part of the school's team up until high school. Nowadays, I have switched to 
         tennis and powerlifting with some running and hiking here and there. Though I do not play much basketball anymore, I still enjoy watching it and keep up with the NBA. It's also worth mentioning that I also love statistics and metrics that come from sports. I spend some of my
-        free time keeping up with them and finding ways to find interesting insights.</p>
+        free time keeping up with them and trying to find interesting insights.</p>
     </div>
   </body>
 </html>
