Add carousel setup
Added the initial setup for carousels with projects and work experience

--- a/pages/work.html
+++ b/pages/work.html
@@ -6,7 +6,7 @@
   <title>My Work</title>
   <link rel="stylesheet" href="../syles.css">
 </head>
-<body>
+<body class="work-body">
     <nav>
         <div class="nav-left">
           <a href="../index.html" class="nav-btn">Home</a>
@@ -17,8 +17,35 @@
           <a href="about.html" class="nav-btn">About</a>
         </div>
     </nav>
-    <div>
-      <h1>Page in progress...</h1>
+    <div class="work-container">
+      <h1 class="work-title">Work Experience</h1>
+      <div class="wrapper">
+        <span class="left-arrow">&#10148;</span>
+        <div class="carousel">
+            <img src="../media/tmp.png" alt="Temporal Image">
+            <img src="../media/tmp.png" alt="Temporal Image">
+            <img src="../media/tmp.png" alt="Temporal Image">
+            <img src="../media/tmp.png" alt="Temporal Image">
+            <img src="../media/tmp.png" alt="Temporal Image">
+            <img src="../media/tmp.png" alt="Temporal Image">
+        </div>
+        <span class="right-arrow">&#10148;</span>
+      </div>
+      <h1 class="work-title">Projects</h1>
+      <div class="wrapper">
+        <span class="left-arrow">&#10148;</span>
+        <div class="carousel">
+          <img src="../media/tmp.png" alt="Temporal Image">
+          <img src="../media/tmp.png" alt="Temporal Image">
+          <img src="../media/tmp.png" alt="Temporal Image">
+          <img src="../media/tmp.png" alt="Temporal Image">
+          <img src="../media/tmp.png" alt="Temporal Image">
+          <img src="../media/tmp.png" alt="Temporal Image">
+        </div>
+        <span class="right-arrow">&#10148;</span>
+      </div>
+      
+      
     </div>
 </body>
 </html>
