--- a/pages/about.html
+++ b/pages/about.html
@@ -20,15 +20,11 @@
     <div class="about-container">
       <div class="profile-pic-container"></div>
       <h2 class="about-title">About me</h2>
-      <p> Hello there! I'm a recent computer science graduate from <a href="https://tec.mx/en/computer-science-and-information-technologies/bs-in-computer-science-and-technology?srsltid=AfmBOor8Aqo1c0-XTua4VAaKRkdIVf-8KKHU-Dzgb41QAhtHsGqh3QPF" target="_blank"><span>ITESM</span></a> 
-        and a software engineer, with particular interst in machine learning and artificial intelligence. My current role is Junior AI Developer at <a href="https://www.capitalcertainty.com" target="_blank"><span>Capital Certainty</span></a>, where I use my skills in AI/ML and web 
-        development to work with clients at enhancing and escalating their products. I'm passionate about learning new things and understanding how things really work. I never say no to a new challenge and pursue them constantly. I'm a firm believer of continuous growth and always 
-        striving to be better every day. If you are interested in knowing more about my work, you can check out my <a href="work.html"><span>work</span></a> page.</p>
-      <p>Outside of work, I consider myself to be a well-rounded person and could probably talk about almost anything, though my two main interests are reading and sports. When it comes to reading, I like to alternate between 
-        fiction and non-fiction, with my favorite genres being science (and science fiction), neo-noir, and classic literature. If you want to know more about what I read, my Goodreads profile is <a href="https://www.goodreads.com/user/show/132694630-sotero-osuna " target="_blank">
-        <span>here</span></a>. For sports, I am also versatile and have played a wide variety of them growing up, with basketball being my favorite and the one I've played the longest, even being part of the school's team up until high school. Nowadays, I have switched to 
-        tennis and powerlifting with some running and hiking here and there. Though I do not play much basketball anymore, I still enjoy watching it and keep up with the NBA. It's also worth mentioning that I also love statistics and metrics that come from sports. I spend some of my
-        free time keeping up with them and trying to find interesting insights.</p>
+      <p> Hello there! I'm Sot, Full-Stack SWE @ Google. Alongside my professional work, I have a strong passion for mathematics, machine learning and artificial intelligence, which I explore
+        through ongoing study and personal projects. I'm driven by curiosity, enjoy taking on challenges, and believe in continous growth.
+      <p>Outside of work, I enjoy reading and sports. I alternate between fiction and non-fiction, with favorites spanning science, science fiction, neo-noir, and classical literature. You can see my reading lists 
+        <a href="https://www.goodreads.com/user/show/132694630-sotero-osuna " target="_blank"> <span>here</span></a>. Sports have always been a big part of my life–basketball was my first love and though I still follow the NBA, these days I'm more focused on 
+        powerlifting, with some running and hiking on the side. I also love diving into sports metrics and statistics to uncover new insights.</p>
     </div>
   </body>
 </html>
